"Misc updates to experience and minor corrections."

--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -101,10 +101,11 @@
 \input{resume/skills.tex}
 \input{resume/experience.tex}
 \input{resume/certifications.tex}
-\input{resume/additional_information.tex}
+%\input{resume/additional_information.tex}
 %\input{resume/experience.tex}
 \input{resume/education.tex}
 \input{resume/languages.tex}
+\input{resume/additional_information.tex}
 %\input{resume/certifications.tex}
 %\input{resume/additional_information.tex}
 %\input{resume/languages.tex}
