--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -16,11 +16,30 @@
 \begin{cventries}
 
 %---------------------------------------------------------
+
   \cventry
-    {Software Engineer} % Job title
-    {\href{https://www.reditpro.com/}{Red IT} \textbf{(Professional)}} % Organization
+    {Technical Account Manager} % Job title
+    {\href{https://www.amaris.com/}{Amaris} \textbf{(Professional)}} % Organization
     {Lisbon, Portugal} % Location
-    {August 2017 - Present} % Date(s)
+    {Feb. 2018 - Present} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities      
+%        \item {Assistance in the integration of a login functionality managed by Azure AD within a vacation management online solution.}
+%%        \item {Development and support of an information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
+%        \item {Development and bug support for an in use information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
+%        \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}		
+		\item {\textbf{Context:} Primary technical contact point with one or more clients, assisting in planning, debugging, and supervising ongoing critical business applications.}
+		\item {\textbf{Functions:} provide technical support for customers to support pre-sales and post-sales processes, address all product-related queries on time, train customers to use products effectively, provide developers with customer's feedback to help identify potential new features or products, report on product performance, identify solutions to reduce support costs, analyze customer's needs and suggest upgrades or additional features to meet their requirements.}		
+		\item {\textbf{Technologies:} TFS, IIS, VNC, Remote Desktop, Cisco AnyConnect, Skype, T-SQL, MS SQL-server 2017.}
+      \end{cvitems}
+    } 
+    
+%---------------------------------------------------------
+  \cventry
+    {Software Consultant} % Job title
+    {\href{https://www.reditpro.com/}{RedIT} \textbf{(Professional)}} % Organization
+    {Lisbon, Portugal} % Location
+    {Aug. 2017 - Jan. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities      
 %        \item {Assistance in the integration of a login functionality managed by Azure AD within a vacation management online solution.}
@@ -37,7 +56,7 @@ Adaptive, perfective and corrective software maintenance for an information mana
     
 %---------------------------------------------------------
   \cventry
-    {Software Engineer} % Job title
+    {Software Consultant} % Job title
     {} % Organization
     {} % Location
     {July 2017 - August 2017} % Date(s)
