--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -34,16 +34,24 @@
       \begin{cvitems} % Description(s)
         \item {
         C/C++\ref{4}{$^{[4]}$}, 
-        C\#\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$}, 
-        Java\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
-        shell scripting\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
-        MySQL\ref{2}{$^{[2]}$}, 
-        MS-SQL\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$}, 
-        jQuery/Ajax/JSON/Bootstrap\ref{9}{$^{[9]}$},  
-        Angular2/4 \& Node.js\ref{9}{$^{[9]}$},  
-		OpenGL\ref{4}{$^{[4]}$}       
+        %C\#\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
+        C\#\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}, 
+        %Java\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$},
+        Java\ref{4}{$^{[4]}$}, 
+        %shell scripting\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$},
+        shell scripting\ref{4}{$^{[4]}$}, 
+		%PL/-SQL\ref{9}{$^{[9]}$},        
+        PL/SQL\ref{5}{$^{[5]}$}, 
+        %T-SQL\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
+        T-SQL\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$},  
+        %jQuery/Ajax/JSON/Bootstrap\ref{9}{$^{[9]}$},
+        jQuery/Ajax/JSON/Bootstrap\ref{5}{$^{[5]}$},  
+        %Angular2/4 \& Node.js\ref{9}{$^{[9]}$},  
+        Angular2/4 \& Node.js\ref{5}{$^{[5]}$},  
+        OpenGL\ref{4}{$^{[4]}$}       
         CUDA/OpenMP/OpenCL/MPI\ref{3}{$^{[3]}$}
-        HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$}, 
+        %HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$}, 
+        HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}, 
         UML\ref{2}{$^{[2]}$},
         LaTeX\ref{4}{$^{[4]}$}%,
         %\textbf{Prolog}\ref{2}{$^{[2]}$},
@@ -62,19 +70,30 @@
     {
       \begin{cvitems} % Description(s) 
         \item {
-        Git\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$}, 
-        SVN\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$}, 
-        Maven\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
-        Ant\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
-        Team Foundation Server\ref{9}{$^{[9]}$}, 
+		%Git\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$},         
+        Git\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}, 
+        %SVN\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
+        SVN\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$},  
+        Maven\ref{2}{$^{[2]}$},
+        %Maven\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
+        %Ant\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$},
+        Ant\ref{4}{$^{[4]}$}, 
+        %Team Foundation Server\ref{9}{$^{[9]}$},
+        Team Foundation Server\ref{5}{$^{[5]}$}, 
         %\textbf{LibreOffice}\ref{8}{$^{[8]}$}, 
-        Eclipse\ref{3}{$^{[3]}$}\ref{7}{$^{[7]}$}, 
-        Netbeans\ref{4}{$^{[4]}$}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
+        %Eclipse\ref{3}{$^{[3]}$}\ref{7}{$^{[7]}$},
+        Eclipse\ref{3}{$^{[3]}$},  
+        %Netbeans\ref{4}{$^{[4]}$}\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
+        Netbeans\ref{4}{$^{[4]}$}, 
         %JMonkeyEngine\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
-        Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$},
-        Visual Studio Code\ref{9}{$^{[9]}$}, 
-        MS SQL-server 2014-2016\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
-        Google Chrome\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$}%,
+        %Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$},
+        Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$},
+        %Visual Studio Code\ref{9}{$^{[9]}$}, 
+        Visual Studio Code\ref{5}{$^{[5]}$},
+        %MS SQL-server 2014-2016\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
+        MS SQL-server 2014-2016\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$},
+        %Google Chrome\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$}%,
+        Google Chrome\ref{5}{$^{[5]}$}%,
         %\textbf{Mozilla Firefox} 
         %\textbf{Gimp}
         %\textbf{Skype}\ref{8}{$^{[8]}$}
@@ -125,11 +144,16 @@
     {
       \begin{cvitems} % Description(s)
         \item {
-        MS Windows 2003-2008 server, XP - 10\ref{8}{$^{[8]}$}, 
-        Linux (Ubuntu, Mint, Fedora, and OpenSuse)\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
-        Android\ref{8}{$^{[8]}$}, 
+%        MS Windows 2003-2008 server, XP - 10\ref{8}{$^{[8]}$}, 
+%        Linux (Ubuntu, Mint, Fedora, and OpenSuse)\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$}, 
+%        Android\ref{8}{$^{[8]}$}, 
+%        %\textbf{iOS}\ref{6}{$^{[6]}$},
+%        CiscoIOS\ref{13}{$^{[13]}$}%,
+		MS Windows 2003-2008 server, XP - 10\ref{4}{$^{[4]}$}, 
+        Linux (Ubuntu, Mint, Fedora, and OpenSuse)\ref{4}{$^{[4]}$}, 
+        %Android\ref{8}{$^{[8]}$}, 
         %\textbf{iOS}\ref{6}{$^{[6]}$},
-        CiscoIOS\ref{13}{$^{[13]}$}%,
+        CiscoIOS\ref{5}{$^{[5]}$}%,
         .} 
       \end{cvitems}
     }  
@@ -151,14 +175,15 @@
     {} 
     {
       \begin{cvitems} % Description(s)
-        \item[]{\textbf{Academic}: \label{1}{$^{[1]}$>1 Yr}, \label{2}{$^{[2]}$1 - 2 Yrs}, \label{3}{$^{[3]}$3 - 5 Yrs}, \label{4}{$^{[4]}$ 5+ Yrs}%}
+        \item[]{\textbf{Academic}: \label{1}{<1 Yr$^{[1]}$}, \label{2}{1 - 2 Yrs$^{[2]}$}, \label{3}{3 - 5 Yrs$^{[3]}$}, \label{4}{5+ Yrs$^{[4]}$}%}
 		%\item[]{
 		\hspace{1.48cm}
-		\textbf{Personal Use}: \label{5}{$^{[5]}$>1 Yr}, \label{6}{$^{[6]}$1 - 2 Yrs}, \label{7}{$^{[7]}$3 - 5 Yrs}, \label{8}{$^{[8]}$ 5+ Yrs}}
-		\item[]{\textbf{Professional}: \label{9}{$^{[9]}$>1 Yr}, \label{10}{$^{[10]}$1 - 2 Yrs}, \label{11}{$^{[11]}$3 - 5 Yrs}, \label{12}{$^{[12]}$ 5+ Yrs}%}
+%		\textbf{Personal Use}: \label{5}{$^{[5]}$>1 Yr}, \label{6}{$^{[6]}$1 - 2 Yrs}, \label{7}{$^{[7]}$3 - 5 Yrs}, \label{8}{$^{[8]}$ 5+ Yrs}}
+%		\item[]{\textbf{Professional}: \label{9}{$^{[9]}$>1 Yr}, \label{10}{$^{[10]}$1 - 2 Yrs}, \label{11}{$^{[11]}$3 - 5 Yrs}, \label{12}{$^{[12]}$ 5+ Yrs}}
+		\textbf{Professional}: \label{5}{<1 Yr$^{[5]}$}, \label{6}{1 - 2 Yrs$^{[6]}$}, \label{7}{3 - 5 Yrs$^{[7]}$}, \label{8}{5+ Yrs$^{[8]}$}}		
 		%\item[]{
-		\hspace{0.5cm}
-		\textbf{Training}: \label{13}{$^{[13]}$>1 Yr}, \label{14}{$^{[14]}$1 - 2 Yrs}, \label{15}{$^{[15]}$3 - 5 Yrs}, \label{16}{$^{[16]}$ 5+ Yrs}}
+%		\hspace{0.5cm}
+%		\textbf{Training}: \label{13}{$^{[13]}$>1 Yr}, \label{14}{$^{[14]}$1 - 2 Yrs}, \label{15}{$^{[15]}$3 - 5 Yrs}, \label{16}{$^{[16]}$ 5+ Yrs}}
       \end{cvitems}
     }  
   \vspace{0.4cm} 
