--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,8 +10,10 @@
 \begin{cvsummary}
 
 %---------------------------------------------------------
-Software Developer with 6 months of experience.
-Former Project Researcher, Laboratory Professor, and Scientific Presenter with over 9 years of experience.
+Technical Account Manager/Software Consultant
+with %2 months + 6 months 
+<1 Yr of experience.
+Former Project Researcher, Lab Instructor, and Scientific Presenter with  9+Yrs of experience.
 Highly motivated, communicative, self-sufficient, and versatile professional with solid academic background in Computer Science and Engineering, namely in: 
 %Proved ability to address problems with a tendentiously unbiased and professional view, namely regarding: 
 Game Engine Technologies, Teaching methodologies, HPC, Geometric Computing, and HCI.
