--- a/examples/resume/certifications.tex
+++ b/examples/resume/certifications.tex
@@ -12,10 +12,44 @@
 
 %---------------------------------------------------------
   \cventry
-    {Design Your First App with Build*} % Certificate designation
+    {Object-Oriented Programming in Java (188.0/200)} % Certificate designation
+    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
     {\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
-    {Online} % Location
-    %{} % Location
+    %{Online} % Location
+    {} % Location
+    %{Jun. 13, 2018 - Jul. 26, 2018} % Date(s)      
+    {Jun. 2018 - Jul. 2018} % Date(s)          
+    {
+	    \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {License \href{https://open.sap.com/}{openSAP}} % License number     
+        \item {\href{https://open.sap.com/verify/xocis-tyvip-gynuh-byneg-punel}{Online Certificate}} %Certificate URL 
+        \item {Valid from Jul. 25, 2017 - Present} % Validity
+      \end{cvitems}
+    }   
+    
+%---------------------------------------------------------
+  \cventry
+    {Cloud-Native Development with SAP Cloud Platform* (249.1/360)} % Certificate designation
+    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
+    {} % Certifacion entity
+    %{Online} % Location
+    {} % Location
+    %{Apr. 10, 2018 - May. 30, 2018} % Date(s)      
+    {Apr. 2018 - May. 2018} % Date(s)          
+    {
+	    \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {License \href{https://open.sap.com/}{openSAP}} % License number     
+        \item {\href{https://open.sap.com/verify/xosen-nykel-vybup-susig-sihim}{Online Certificate}} %Certificate URL 
+        \item {Valid from May. 30, 2018 - Present} % Validity
+      \end{cvitems}
+    }   
+
+%---------------------------------------------------------
+  \cventry
+    {Design Your First App with Build* (230.0/240)} % Certificate designation
+    {} % Certifacion entity
+    %{Online} % Location
+    {} % Location
     %{Oct. 4, 2017 - Nov. 9, 2017} % Date(s)      
     {Oct. 2017 - Nov. 2017} % Date(s)      
     {
@@ -28,7 +62,7 @@
 	  
 %---------------------------------------------------------
 %  \cventry
-%    {Be Visual! Sketching Basics for IT Business} % Certificate designation
+%    {Be Visual! Sketching Basics for IT Business (70.7/80)} % Certificate designation
 %    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
 %    {} % Certifacion entity
 %    %{Online} % Location
@@ -45,7 +79,7 @@
 	  
 %---------------------------------------------------------
   \cventry
-    {Developing Java-Based Apps on SAP Cloud Platform*} % Certificate designation
+    {Developing Java-Based Apps on SAP Cloud Platform* (234.3/300)} % Certificate designation
     %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
     {} % Certifacion entity
     %{Online} % Location
@@ -62,7 +96,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {SAP HANA Cloud Platform* Essentials} % Certificate designation
+    {SAP HANA Cloud Platform* Essentials (300/360)} % Certificate designation
     %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
     {} % Certifacion entity
     %{Online} % Location
@@ -79,7 +113,7 @@
     
 %---------------------------------------------------------  
   \cventry
-    {Extending SAP S/4HANA with SAP HANA Cloud Platform*} % Certificate designation
+    {Extending SAP S/4HANA with SAP HANA Cloud Platform* (254.0/360)} % Certificate designation
     %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
     {} % Certifacion entity
     %{Online} % Location
