--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -29,8 +29,8 @@
 %        \item {Development and bug support for an in use information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
 %        \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}		
 		\item {\textbf{Context:} Primary technical contact point with one or more clients, assisting in planning, debugging, and supervising ongoing critical business applications.}
-		\item {\textbf{Functions:} provide technical support for customers to support pre-sales and post-sales processes, address all product-related queries on time, train customers to use products effectively, provide developers with customer's feedback to help identify potential new features or products, report on product performance, identify solutions to reduce support costs, analyze customer's needs and suggest upgrades or additional features to meet their requirements.}		
-		\item {\textbf{Technologies:} TFS, IIS, VNC, Remote Desktop, Cisco AnyConnect, Skype, T-SQL, MS SQL-server 2017.}
+		\item {\textbf{Functions:} provide technical support for customers to support pre-sales and post-sales processes, address all product-related queries on time, create learning materials and train customers to use products effectively, assist in the creation of support documentation for existing software/service products, provide developers with customer's feedback to help identify potential new features or products, report on product performance, identify solutions to reduce support costs, analyze customer's needs and suggest upgrades or additional features to meet their requirements.}		
+		\item {\textbf{Technologies:} AzureDevOps, TFS, IIS 6-8, VNC, mRemote, Cisco AnyConnect, Cisco VPN client, FortiClient, Teamviewer, Skype/Skype for Business, WebEx, MS Outlook, T-SQL, MS SQL-server 2012-2017.}
       \end{cvitems}
     } 
     
