--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -43,7 +43,7 @@
 		%PL/-SQL\ref{9}{$^{[9]}$},        
         PL/SQL\ref{5}{$^{[5]}$}, 
         %T-SQL\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
-        T-SQL\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$},  
+        T-SQL\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$},  
         %jQuery/Ajax/JSON/Bootstrap\ref{9}{$^{[9]}$},
         jQuery/Ajax/JSON/Bootstrap\ref{5}{$^{[5]}$},  
         %Angular2/4 \& Node.js\ref{9}{$^{[9]}$},  
@@ -69,7 +69,10 @@
     {} % Date(s)
     {
       \begin{cvitems} % Description(s) 
-        \item {
+        \item {        
+        %Team Foundation Server\ref{9}{$^{[9]}$},
+		Azure DevOps\ref{5}{$^{[5]}$},         
+        Team Foundation Server (TFS)\ref{5}{$^{[5]}$},
 		%Git\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$},         
         Git\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}, 
         %SVN\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
@@ -77,9 +80,7 @@
         Maven\ref{2}{$^{[2]}$},
         %Maven\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}, 
         %Ant\ref{4}{$^{[4]}$}\ref{8}{$^{[8]}$},
-        Ant\ref{4}{$^{[4]}$}, 
-        %Team Foundation Server\ref{9}{$^{[9]}$},
-        Team Foundation Server\ref{5}{$^{[5]}$}, 
+        Ant\ref{4}{$^{[4]}$},  
         %\textbf{LibreOffice}\ref{8}{$^{[8]}$}, 
         %Eclipse\ref{3}{$^{[3]}$}\ref{7}{$^{[7]}$},
         Eclipse\ref{3}{$^{[3]}$},  
@@ -91,12 +92,16 @@
         %Visual Studio Code\ref{9}{$^{[9]}$}, 
         Visual Studio Code\ref{5}{$^{[5]}$},
         %MS SQL-server 2014-2016\ref{2}{$^{[2]}$}\ref{9}{$^{[9]}$},
-        MS SQL-server 2014-2016\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$},
+        MS SQL-server 2012-2017\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$},
+        MS Outlook\ref{5}{$^{[5]}$},
         %Google Chrome\ref{8}{$^{[8]}$}\ref{9}{$^{[9]}$}%,
-        Google Chrome\ref{5}{$^{[5]}$}%,
+        %Skype\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$},
+        Skype for Business\ref{5}{$^{[5]}$},
+        WebEx\ref{5}{$^{[5]}$},
+        Google Chrome\ref{5}{$^{[5]}$},
+        Teamviewer\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}%,
         %\textbf{Mozilla Firefox} 
         %\textbf{Gimp}
-        %\textbf{Skype}\ref{8}{$^{[8]}$}
         %\textbf{WhatsApp}\ref{5}{$^{[5]}$}
         %\textbf{Slack}\ref{5}{$^{[5]}$}
         %\textbf{UmbreloUML}\ref{2}{$^{[2]}$},
@@ -149,7 +154,7 @@
 %        Android\ref{8}{$^{[8]}$}, 
 %        %\textbf{iOS}\ref{6}{$^{[6]}$},
 %        CiscoIOS\ref{13}{$^{[13]}$}%,
-		MS Windows 2003-2008 server, XP - 10\ref{4}{$^{[4]}$}, 
+		MS Windows 2003-2008 server, XP - 10\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}, 
         Linux (Ubuntu, Mint, Fedora, and OpenSuse)\ref{4}{$^{[4]}$}, 
         %Android\ref{8}{$^{[8]}$}, 
         %\textbf{iOS}\ref{6}{$^{[6]}$},
@@ -157,7 +162,7 @@
         .} 
       \end{cvitems}
     }  
-  \vspace{-0.4cm} 
+  \vspace{-0.2cm} 
     
 
 %---------------------------------------------------------
@@ -177,7 +182,7 @@
       \begin{cvitems} % Description(s)
         \item[]{\textbf{Academic}: \label{1}{<1 Yr$^{[1]}$}, \label{2}{1 - 2 Yrs$^{[2]}$}, \label{3}{3 - 5 Yrs$^{[3]}$}, \label{4}{5+ Yrs$^{[4]}$}%}
 		%\item[]{
-		\hspace{1.48cm}
+		\hspace{2.2cm}
 %		\textbf{Personal Use}: \label{5}{$^{[5]}$>1 Yr}, \label{6}{$^{[6]}$1 - 2 Yrs}, \label{7}{$^{[7]}$3 - 5 Yrs}, \label{8}{$^{[8]}$ 5+ Yrs}}
 %		\item[]{\textbf{Professional}: \label{9}{$^{[9]}$>1 Yr}, \label{10}{$^{[10]}$1 - 2 Yrs}, \label{11}{$^{[11]}$3 - 5 Yrs}, \label{12}{$^{[12]}$ 5+ Yrs}}
 		\textbf{Professional}: \label{5}{<1 Yr$^{[5]}$}, \label{6}{1 - 2 Yrs$^{[6]}$}, \label{7}{3 - 5 Yrs$^{[7]}$}, \label{8}{5+ Yrs$^{[8]}$}}		
@@ -186,7 +191,7 @@
 %		\textbf{Training}: \label{13}{$^{[13]}$>1 Yr}, \label{14}{$^{[14]}$1 - 2 Yrs}, \label{15}{$^{[15]}$3 - 5 Yrs}, \label{16}{$^{[16]}$ 5+ Yrs}}
       \end{cvitems}
     }  
-  \vspace{0.4cm} 
+  \vspace{0.2cm} 
       
 %---------------------------------------------------------
 
