--- a/examples/resume/research_interests.tex
+++ b/examples/resume/research_interests.tex
@@ -2,7 +2,7 @@
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
 %\cvsectionspecifiedcolor{rainbowcolor-orange}{\faGears \acvHeaderIconSep Research Interests}
-\cvsectionspecifiedcolor{rainbowcolor-red}{\faGears \acvHeaderIconSep Research Interests}
+\cvsectionspecifiedcolor{rainbowcolor-red}{\faGears \acvHeaderIconSep Areas of Interest}
 
 
 %-------------------------------------------------------------------------------
@@ -24,12 +24,13 @@
 %        \item {Multi-touch technologies.}
 %        \item {Gesture recognition.}      
 %        \item {Voice/Camera-based Human-Computer Interaction (HCI).}
-        \item {Multi-touch, Voice and Camera-based HCI technologies.}
-        \item {3D Animation/Modelling and Geometrical Computing.}
+        \item {Touch/Voice/Camera-based HCI technologies.}
+        \item {3D Animation/Modelling \& Geometrical Computing.}
         \item {Multi-Core CPU/GPU and Cloud computing.}
         \item {Computational Fluids Dynamics (CFD).}
         \item {Artificial Intelligence, Robotics, and Cybernetics.}
         \item {Computer Games \& Gamification.}
+        \item {Workforce scheduling \& management software.}
       \end{cvitems}
 	  \end{multicols}
 	  \vspace{-0.5cm}
