"Corrected education, typo."

--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,9 +10,7 @@
 \begin{cvsummary}
 
 %---------------------------------------------------------
-Technical Account Manager/Software Consultant
-with %2 months + 6 months 
-1-2 Yrs of experience.
+Software developer in several programming languages, also with experience in Primary technical contact point with one or more clients, assisting in planning, debugging, and supervising ongoing critical business applications.
 Former Project Researcher, Lab Instructor, and Scientific Presenter with 9+ Yrs of experience.
 Highly motivated, communicative, and self-sufficient%, and versatile 
 professional with solid academic background in Computer Science and Engineering, namely in: 
