--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -21,8 +21,12 @@
         \item {\textbf{Thesis:} Influence-based Motion Planning Algorithms for Games}
         %\item {Areas of Study: Artificial Intelligence, Motion Planning, and Game Engines}
         \item {\textbf{Supervisor:} \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
-        \item {\textbf{Context:} PhD thesis consisting in the implementing a modular game engine in Java, suitable for teaching a video games and technologies course, and serve as a framework suitable to experiment with scene management for MMOGs. Latter, changed to path finding algorithms merged with influence maps.}
-        \item {\textbf{Functions:} Gathering/analysis of state-of-the-art regarding scene management in virtual environments. Implementation of a modular game engine in Java (JOT). Implementation of techniques for state management in MMOGs. Integration of the proposed solution with a network simulator to test the solution(s) performance. Implementation of a novel pathfinding algorithm, and two novel techniques to integrate influence maps with pathfinders. Writing of articles, the thesis, and presentation, and oral presentation/defense of the former.}
+        \item {\textbf{Context:} Implementation of a modular game engine, suitable for teaching a video games technologies course.%, and serve as a framework to experiment with scene management for MMOGs. 
+        Path finding algorithms merged with influence maps.}
+        \item {\textbf{Functions:} Gathering/analysis of state-of-the-art regarding (i)modular game engine architectures, (ii)video game technologies teaching methodologies, (iii)influence maps and path finding algorithms. %(iv)scene management in virtual environments. 
+        Game engine development (JOT). %Implementation of techniques for state management in MMOGs.         
+        %Integration of the proposed solution with a network simulator to test the solution(s) performance.         
+        Implementation of a novel pathfinding algorithm, and two novel techniques to integrate influence maps with pathfinders. Writing of journal/conference scientific articles and thesis, presentation of conference articles, and thesis oral presentation/defense.}
         \item {\textbf{Technologies:} Java 1.6-1.8, GridGain, JGroups, JogAmp, Maven, GIT, Apache Math Commons, NetBeans, %C++, Omnet++, Eclipse, LibreOffice,
 LaTeX, Beamer.} %, TexMaker, JabRef.}
       \end{cvitems}
@@ -35,15 +39,16 @@ LaTeX, Beamer.} %, TexMaker, JabRef.}
     {} % Location
     {Sept. 2010 - July 2011} % Date(s)
     {
-      \begin{cvitems} % Description(s) bullet points
+      %\begin{cvitems} % Description(s) bullet points
         %\item {Final Project at \href{http://www.ubi.pt/}{Instituto de Telecomunica\c{c}~oes}: Seamless zoning algorithms for MMOGs over a Grid (18/20 points)}
-        \item {\textbf{Final Project:} Seamless zoning algorithms for MMOGs over a Grid (18/20 points)}
-		\item {\textbf{Supervisor:} \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
-		\item {\textbf{Context:} Bachelors final project consisting in extending with scene management techniques an existing Java video game, to explore grid computing frameworks and the possibility of converting multiplayer online video games into MMOGs.}
-		\item {\textbf{Functions:} Gathering/analysis of state-of-the-art regarding scene management in virtual environments. Evaluation of communication, storage, and computation grid solutions (e.g., GridGain). Implementation of existing techniques into an existing video game. Writing of the project final report and presentation, and oral presentation former.}
-		\item {\textbf{Technologies:} Java 1.6, GridGain, Apache Math Commons, JogAmp, NetBeans, LaTeX, Beamer.} %, TexMaker, JabRef.}
-      \end{cvitems}
+        %\item {\textbf{Final Project:} Seamless zoning algorithms for MMOGs over a Grid (18/20 points)}
+		%\item {\textbf{Supervisor:} \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
+		%\item {\textbf{Context:} Bachelors final project consisting in extending with scene management techniques an existing Java video game, to explore grid computing frameworks and the possibility of converting multiplayer online video games into MMOGs.}
+		%\item {\textbf{Functions:} Gathering/analysis of state-of-the-art regarding scene management in virtual environments. Evaluation of communication, storage, and computation grid solutions (e.g., GridGain). Implementation of existing techniques into an existing video game. Writing of the project final report and presentation, and oral presentation former.}
+		%\item {\textbf{Technologies:} Java 1.6, GridGain, Apache Math Commons, JogAmp, NetBeans, LaTeX, Beamer.} %, TexMaker, JabRef.}
+      %\end{cvitems}      
     }
+  \vspace{-0.5cm}
   
 %---------------------------------------------------------    
   \cventry
@@ -56,8 +61,8 @@ LaTeX, Beamer.} %, TexMaker, JabRef.}
         \item {\textbf{Final Thesis:} Real-Time 3D Rendering of Water using CUDA (19/20 points)}
         %\item {Area of Study: Natural Phenomena Real-Time Simulation}
         \item {\textbf{Supervisor:} \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
-		\item {\textbf{Context:} Master's thesis consisting in the extension of a 2D fluids simulation algorithm to 3D in the GPU resorting to CUDA. }
-		\item {\textbf{Functions:} Gathering/analysis of state-of-the-art regarding fluid simulation in virtual environments. Porting a 2D fluids simulation (Jos Stam Stable fluids) algorithm to 3D in the GPU resorting to CUDA. Writing of the thesis, scientific articles, and corresponding presentations. Oral presentation/defense of the thesis and of an article in a national conference.}
+		\item {\textbf{Context:} Extending a 2D fluids simulation algorithm to 3D in the GPU resorting to CUDA. }
+		\item {\textbf{Functions:} Gathering/analysis of state-of-the-art regarding fluid simulation in virtual environments. Porting a 2D fluids simulation (Jos Stam Stable fluids) algorithm to 3D in the GPU resorting to CUDA. Writing of journal/conference scientific articles and thesis, presentation of conference articles, and thesis oral presentation/defense.}
         \item {\textbf{Technologies:} CUDA 2.0, C/C++, Visual Studio 2005-2008, LaTeX, Beamer.} %, TexMaker, JabRef.}
       \end{cvitems}
     }
@@ -70,7 +75,8 @@ LaTeX, Beamer.} %, TexMaker, JabRef.}
     {Sept. 2002 - July 2007} % Date(s)
     {
     }
-
+  \vspace{-0.5cm}
+    
 %---------------------------------------------------------    
   \cventry
     {High school Professional Degree in Electrotechnology and Electronics} % Degree
