--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -30,7 +30,8 @@
 %        \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}		
 		\item {\textbf{Context:} Primary technical contact point with one or more clients, assisting in planning, debugging, and supervising ongoing critical business applications.}
 		\item {\textbf{Functions:} provide technical support for customers to support pre-sales and post-sales processes, address all product-related queries on time, create learning materials and train customers to use products effectively, assist in the creation of support documentation for existing software/service products, provide developers with customer's feedback to help identify potential new features or products, report on product performance, identify solutions to reduce support costs, analyze customer's needs and suggest upgrades or additional features to meet their requirements.}		
-		\item {\textbf{Technologies:} AzureDevOps, TFS, IIS 6-8, VNC, mRemote, Cisco AnyConnect, Cisco VPN client, FortiClient, Teamviewer, Skype/Skype for Business, WebEx, MS Outlook, T-SQL, MS SQL-server 2012-2017.}
+		\item {\textbf{Technologies:} Azure DevOps, TFS, IIS 6-8, VNC, mRemote, Cisco AnyConnect, %Cisco VPN client, 
+FortiClient, Teamviewer, Skype/Skype for Business, WebEx, MS Outlook, MS Office, PowerBI, SSRS/SSIS/SSAS, Postman, SoapUI, T-SQL, MS SQL-server 2012-2017.}		
       \end{cvitems}
     } 
     
@@ -44,7 +45,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities      
 %        \item {Assistance in the integration of a login functionality managed by Azure AD within a vacation management online solution.}
 %%        \item {Development and support of an information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
-%        \item {Development and bug support for an in use information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
+%        \item {Development and bug suTFS, Account Management, teacherpport for an in use information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
 %        \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}		
 		\item {\textbf{Context:} 
 Adaptive, perfective and corrective software maintenance for an information management system used in the areas of social action and health %(cannot disclose from which due to confidentiality agreement terms)
@@ -67,7 +68,7 @@ Adaptive, perfective and corrective software maintenance for an information mana
 %        \item {Development and bug support for an in use information management system in the areas of social action and health. %used by a Portuguese collective entity of private law and administrative public utility.} 
 %        \linebreak (\textbf{cannot disclose from which due to confidentiality agreement terms}).}		
 		\item {\textbf{Context:} Perfective and corrective software maintenance in the integration of a login functionality managed by Azure AD within a near release vacation management online solution, lets refer to it as Y.}
-		\item {\textbf{Functions:} Study of Azure AD usage scenarios. Assessment of how could Azure AD be integrated in the at the time login process of Y.}		
+		\item {\textbf{Functions:} Study of Azure AD usage scenarios. Assessment on how to integrate (at the time) Y login process with Azure AD.}		
 		\item {\textbf{Technologies:} Git, Angular2/4, JSON, Bootstrap, Node.js, C\#, MVC 5.0, MS SQL-server 2016, Visual Studio 2017, Visual Studio Code, Azure AD.}
       \end{cvitems}
     }   
@@ -109,9 +110,9 @@ Adaptive, perfective and corrective software maintenance for an information mana
 %		\item {Engineering and design of a novel modular game engine architecture to test state management techniques.}
 %        \item {Implementation of Grid-based solutions to transform multi-player games into MMOGs.}
 %        %\item {Conducting research and review the state of art regarding Massive Multiplayer Online Games (MMOGs).}		
-		\item {\textbf{Context:} Study and ultimately attempt to developed a game engine for MMOGs to work on the browser.}
-		\item {\textbf{Functions:} Developed a game engine prototype in Java to test state management algorithms. Assisted in porting an existing multi-player game (Jake2) to a MMOFPS resorting to GridGain. Implemented fluid simulators in the GPU. Elaboration and public presentation of scientific articles.}
-		\item {\textbf{Technologies:} Java 1.6, GridGain, Jgroups, JogAmp, Maven, Apache Math Commons, C/C++, CUDA 2.0, LaTeX,  Beamer.} %, TexMaker, JabRef.}
+		\item {\textbf{Context:} Study and ultimately attempt to Develop a game engine for MMOGs to work on the browser.}
+		\item {\textbf{Functions:} Develop a Java game engine prototype, to test state management algorithms. Assist in porting an existing multi-player game (Jake2) to a MMOFPS resorting to GridGain. Implement fluid simulators in the GPU. Elaboration and public presentation of scientific conference articles.}
+		\item {\textbf{Technologies:} Java 1.6, GridGain, Jgroups, JogAmp, Apache Math Commons, C/C++, CUDA 2.0, LaTeX,  Beamer.} %, TexMaker, JabRef.}
       \end{cvitems}
     }     
     
@@ -132,12 +133,12 @@ Adaptive, perfective and corrective software maintenance for an information mana
     {\linebreak Jan. 2012 - July 2016 \linebreak Jan. 2012 - July 2012} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-%		\item {Developed laboratory course material, including practical sheets and tests (available upon request).}
+%		\item {Develop laboratory course material, including practical sheets and tests (available upon request).}
 %        %\item {Responsible for 0.5~hour lecture and supervision of 1.5~hour laboratory.} 
 %        %\item {Participated in practical project joint assessment with course supervisor.}
 %        \item {Responsible for 0.5~hour lecture and supervision of 1.5~hour laboratory, and practical project joint assessment.}% with course supervisor	.}		
 		\item {\textbf{Context:} Lab. assistant in practical component of the video game technologies and computer graphics courses.}
-		\item {\textbf{Functions:} Developed lab. course material, including practical sheets and tests (available upon request). Responsible for 0.5 hour lecture and supervision of 1.5 hour lab. Participated in practical project joint assessment with course supervisor.}
+		\item {\textbf{Functions:} Develop lab. course material, including practical sheets and tests (available upon request). Responsible for 0.5 hour lecture and supervision of 1.5 hour lab. Participated in practical project joint assessment with course supervisor.}
 		\item {\textbf{Technologies:} Java 1.6-1.8, JmonkeyEngine, NetBeans, Whiteboard, LibreOffce, LaTeX, Beamer.} %, TexMaker, JabRef.}
       \end{cvitems}
     }       
@@ -163,7 +164,7 @@ Adaptive, perfective and corrective software maintenance for an information mana
 %%                %instead of games themselves.}           
 %%        \item {Participated in practical project joint assessment 
 %%				with course supervisor.}
-%%		\item {Developed laboratory course material, 
+%%		\item {Develop laboratory course material, 
 %%                including practical sheets and tests available upon request.}
 %%      \end{cvitems}	   
 %    }
