--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -48,8 +48,8 @@
         jQuery/Ajax/JSON/Bootstrap\ref{5}{$^{[5]}$},  
         %Angular2/4 \& Node.js\ref{9}{$^{[9]}$},  
         Angular2/4 \& Node.js\ref{5}{$^{[5]}$},  
-        OpenGL\ref{4}{$^{[4]}$}       
-        CUDA/OpenMP/OpenCL/MPI\ref{3}{$^{[3]}$}
+        OpenGL\ref{4}{$^{[4]}$},      
+        CUDA/OpenMP/OpenCL/MPI\ref{3}{$^{[3]}$},
         %HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{9}{$^{[9]}$}, 
         HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}, 
         UML\ref{2}{$^{[2]}$},
@@ -154,7 +154,7 @@
 %        Android\ref{8}{$^{[8]}$}, 
 %        %\textbf{iOS}\ref{6}{$^{[6]}$},
 %        CiscoIOS\ref{13}{$^{[13]}$}%,
-		MS Windows 2003-2008 server, XP - 10\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}, 
+		MS Windows 2003-2016 server, XP - 10\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}, 
         Linux (Ubuntu, Mint, Fedora, and OpenSuse)\ref{4}{$^{[4]}$}, 
         %Android\ref{8}{$^{[8]}$}, 
         %\textbf{iOS}\ref{6}{$^{[6]}$},
