"Contact information + experience minor updates."

--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -62,7 +62,7 @@
 \acvHeaderIconSep Single\vspace{0.1cm}}
 %\address{Rua das Oper\'arias Conserveiras, n.$^o$ 15, 2520-639, Peniche, Portugal}
 
-\mobile{(+351) 96-281-68-58} 
+%\mobile{(+351) 96-281-68-58} 
 \email{g.n.p.amador@gmail.com}
 %\homepage{www.posquit0.com}
 %\github{g-amador}
@@ -71,7 +71,7 @@
 %\researchgate{Goncalo\_Amador} %No icon not working yet
 \linkedin{g-amador}
 %\twitter{@twit}
-\skype{gnpa\_skype}
+%\skype{gnpa\_skype}
 %\reddit{reddit-id}
 %\extrainfo{extra informations} 
 
