--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -21,7 +21,7 @@
     {Technical Account Manager} % Job title
     {\href{https://www.amaris.com/}{Amaris} \textbf{(Professional)}} % Organization
     {Lisbon, Portugal} % Location
-    {Feb. 2018 - Present} % Date(s)
+    {Feb. 2018 - Dec. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities      
 %        \item {Assistance in the integration of a login functionality managed by Azure AD within a vacation management online solution.}
