"Personal data Update."

--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -54,18 +54,21 @@
 \photo[circle,noedge,left]{profile.png}
 \name{Gon\c{c}alo N.}{Paiva Amador\vspace{0.1cm}}
 %\position{Software Engineer {\enskip\cdotp\enskip} Lecturer {\enskip\cdotp\enskip} Project Manager}
-\personalinformation{\faHome \acvHeaderIconSep Lisbon, Portugual%Peniche, Portugal %{\enskip\cdotp\enskip} \faFlag \acvHeaderIconSep Nationality: Portuguese\\
-{\enskip\cdotp\enskip} \faFlag \acvHeaderIconSep Portuguese {\enskip\cdotp\enskip} \faBirthdayCake \acvHeaderIconSep 27/07/1983
-{\enskip\cdotp\enskip} \faMars \acvHeaderIconSep Male
-{\enskip\cdotp\enskip} %\faFemale 
-\faMale 
-\acvHeaderIconSep Single\vspace{0.1cm}}
+\personalinformation{
+%\faHome \acvHeaderIconSep Peniche, Portugal {\enskip\cdotp\enskip} 
+\faHome \acvHeaderIconSep Lisbon, Portugual {\enskip\cdotp\enskip} 
+\faFlag \acvHeaderIconSep Portuguese {\enskip\cdotp\enskip} 
+%\faBirthdayCake \acvHeaderIconSep 27/07/1983 {\enskip\cdotp\enskip} 
+\faMars \acvHeaderIconSep Male %{\enskip\cdotp\enskip} 
+%\faFemale \acvHeaderIconSep Single\vspace{0.1cm}
+%\faMale \acvHeaderIconSep Single\vspace{0.1cm}
+}
 %\address{Rua das Oper\'arias Conserveiras, n.$^o$ 15, 2520-639, Peniche, Portugal}
 
 %\mobile{(+351) 96-281-68-58} 
 \email{g.n.p.amador@gmail.com}
 %\homepage{www.posquit0.com}
-%\github{g-amador}
+\github{g-amador}
 %\bitbucket{g-amador}
 %\stackoverflow{SO-id}{SO-name}
 %\researchgate{Goncalo\_Amador} %No icon not working yet
